--- a/lab4/index.html
+++ b/lab4/index.html
@@ -9,7 +9,7 @@
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body style="background-color: <%= cbgcolour %>;">
     <h1>Lab 4 colours</h1>
 
 
@@ -35,22 +35,21 @@
             <button class="insertColor">Insert Color</button>
             <button class="saveColor" type="submit" name="submit">Save Changes</button>
         </form>
+        <button class="deleteColor" type="submit" name="submit">Delete Colour</button>
+        <button class="saveCookies" type="submit" name="submit">Save Cookies</button>
 
         <h4>Display Color:</h4>
-            <div id="color" style="background-color: <%= bgcolour %>;">
-    </form>
-    </div>
+        <div id="color" style="background-color: <%= bgcolour %>;">
+            </form>
+        </div>
 
-    <form class="delete-form">
-        <input type="hidden" name="colorid" id="colorid" placeholder="ColorID" value=<%=colorId %>>
-        <button class="deleteColor" type="submit" name="submit">Delete Colour</button>
-    </form>
 
-    
-    <!-- have buttons to switch to next colour-->
-    <div class="nextColor">
-        <button class="previous">previous Color</button>
-        <button class="next">next Color</button>
+
+        <!-- have buttons to switch to next colour-->
+        <div class="nextColor">
+            <button class="previous">previous Color</button>
+            <button class="next">next Color</button>
+        </div>
     </div>
 
     <script>
@@ -67,7 +66,7 @@
                     data: data,
                     success: function (result) {
                         alert(result);
-                        
+
                     },
                     error: function (jqXHR, exception) {
                         var msg = jqXHR.responseText;
@@ -89,7 +88,10 @@
                     url: url,
                     data: data,
                     success: function (result) {
+                        //redirect to the home page
+                        window.location.href = "/";
                         alert(result);
+
                     },
                     error: function (jqXHR, exception) {
                         var msg = jqXHR.responseText;
@@ -131,7 +133,6 @@
                 var data = {
                     colorid: colorid
                 };
-
                 console.log(colorid)
                 $.ajax({
                     type: 'POST',
@@ -159,7 +160,6 @@
                 var data = {
                     colorid: colorid
                 };
-
                 console.log(colorid)
                 $.ajax({
                     type: 'POST',
@@ -174,7 +174,32 @@
                         alert(msg);
                     }
                 });
+            });
+        });
+        //function to send a post request to save the colour hex to cookies if saveCookies is clicked
+        $(document).ready(function () {
+            $('.saveCookies').click(function (event) {
+                event.preventDefault();
+                //get the colorid and put it into a data object
+                var colorhex = $('#hexString').val();
+                console.log(colorhex)
+                // create a data object
+                var data = {
+                    colorhex: colorhex
+                };
+                console.log(colorhex)
+                $.ajax({
+                    type: 'POST',
+                    url: "/cookie/",
+                    data: data,
+                    success: function (result) {
 
+                    },
+                    error: function (jqXHR, exception) {
+                        var msg = jqXHR.responseText;
+                        alert(msg);
+                    }
+                });
             });
         });
         //function to clear the form
